--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
   <title>Courbe Ritaline</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    body { font-family: sans-serif; padding: 0; margin: 0; }
-    #chart-container { width: 100%; height: 400px; }
-    canvas { width: 100%; height: 100%; }
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+    #chart-container {
+      width: 100%;
+      height: 400px;
+    }
+    canvas {
+      width: 100%;
+      height: 100%;
+    }
   </style>
 </head>
 <body>
@@ -16,17 +26,17 @@
   </div>
 
   <script>
-    window.addEventListener("message", function(event) {
+    window.addEventListener("message", function (event) {
       try {
         const doses = JSON.parse(event.data);
+        console.log("📨 Données reçues :", doses);
+
         const script = document.createElement("script");
         script.src = "script.js";
-        script.onload = () => {
-          calculerEtAfficherCourbe(doses);
-        };
+        script.onload = () => calculerEtAfficherCourbe(doses);
         document.body.appendChild(script);
       } catch (e) {
-        console.error("Erreur lors de la réception des données :", e);
+        console.error("❌ Erreur lors de la réception des données :", e);
       }
     });
   </script>
