--- a/index.html
+++ b/index.html
@@ -6,19 +6,9 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="script.js" defer></script>
   <style>
-    body {
-      font-family: sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-    #chart-container {
-      width: 100%;
-      height: 400px;
-    }
-    canvas {
-      width: 100%;
-      height: 100%;
-    }
+    body { font-family: sans-serif; padding: 0; margin: 0; }
+    #chart-container { width: 100%; height: 400px; }
+    canvas { width: 100%; height: 100%; }
   </style>
 </head>
 <body>
