--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>Courbe Ritaline</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="script.js" defer></script>
   <style>
     body { font-family: sans-serif; padding: 0; margin: 0; }
     #chart-container { width: 100%; height: 400px; }
@@ -15,5 +14,22 @@
   <div id="chart-container">
     <canvas id="myChart"></canvas>
   </div>
+
+  <script>
+    window.addEventListener("message", function(event) {
+      try {
+        console.log("Données reçues :", event.data); // ← pour debug
+        const doses = JSON.parse(event.data);
+        const script = document.createElement("script");
+        script.src = "script.js";
+        script.onload = () => {
+          calculerEtAfficherCourbe(doses);
+        };
+        document.body.appendChild(script);
+      } catch (e) {
+        console.error("Erreur lors de la réception des données :", e);
+      }
+    });
+  </script>
 </body>
 </html>
